@@ -382,7 +382,7 @@
       <module id="gnome-backgrounds"/>
       <module id="gnome-control-center" branch="gnome-2-18"/>
       <module id="gnome-desktop"/>
-      <module id="gnome-doc-utils"/>
+      <module id="gnome-doc-utils" branch="gnome-2-18"/>
       <module id="gnome-games" branch="gnome-2-18"/>
       <module id="gnome-icon-theme" branch="gnome-2-18"/>
       <module id="gnome-keyring" branch="gnome-2-18"/>
