@@ -1,3 +1,8 @@
+2007-04-22  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: gnome-doc-utils branched for 2.18.
+
 2007-04-19  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
